# MobileEngine3D

./: .gitattributes  .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/ru/ilapin/mobileengine3d/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/scenes/: main_menu_scene.json
app/src/main/assets/shaders/: forwardambient.fsh  forwardambient.vsh  forwarddirectional.fsh  forwardpoint.fsh  forwardspot.fsh  forwardspot.vsh  lighting.fsh  lighting.glh  lighting.vsh  lightingMain.fsh  sampling.glh
app/src/main/cpp/: glwrapper.h  logwrapper.cpp  logwrapper.h  native-lib.cpp  native-main.cpp  research.cpp  research.h  utils.cpp  utils.h
app/src/main/cpp/engine/components/: attenuation.cpp  attenuation.h  baselight.cpp  baselight.h  camera.cpp  camera.h  directionallight.cpp  directionallight.h  gamecomponent.cpp  gamecomponent.h  lightsfactory.cpp  lightsfactory.h  meshrenderer.cpp  meshrenderer.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
app/src/main/cpp/engine/core/: coreengine.cpp  coreengine.h  gameobject.cpp  gameobject.h  matrix4f.cpp  matrix4f.h  quaternion.cpp  quaternion.h  scene.h  scenewithrootobject.cpp  scenewithrootobject.h  scenewithtimemeasurement.cpp  scenewithtimemeasurement.h  transform.cpp  transform.h  userinput.cpp  userinput.h  vector2f.cpp  vector2f.h  vector3f.cpp  vector3f.h
app/src/main/cpp/engine/rendering/: material.cpp  material.h  mesh.cpp  mesh.h  renderingengine.cpp  renderingengine.h  renderutils.cpp  renderutils.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.cpp  vertex.h
app/src/main/cpp/engine/rendering/meshloading/: indexedmodel.cpp  indexedmodel.h  objindex.h  objmodel.cpp  objmodel.h
app/src/main/cpp/engine/rendering/resourcemanagement/: mappedvalues.h  meshresource.cpp  meshresource.h  shaderresource.cpp  shaderresource.h  textureresource.cpp  textureresource.h
app/src/main/cpp/game/: BoundingSphere.cpp  BoundingSphere.h  JoystickInput.cpp  JoystickInput.h  MainMenuScene.cpp  MainMenuScene.h  TestController.cpp  TestController.h  TestScene.cpp  TestScene.h  TestUserInput.cpp  TestUserInput.h  lookatcomponent.cpp  lookatcomponent.h
app/src/main/cpp/libs/jpegutil/: JpegDec.cpp  JpegDecPlanarYCbCr.cpp  JpegDecPlanarYCbCr.h  JpegEnc.cpp
app/src/main/java/ru/ilapin/common/: IOUtils.java
app/src/main/java/ru/ilapin/common/android/: AndroidIOUtils.java
app/src/main/java/ru/ilapin/common/widgets/joystickview/: DraggingState.java  IdleState.java  JoystickPosition.java  JoystickView.java  NewState.java  RecoilingState.java  State.java
app/src/main/java/ru/ilapin/mobileengine3d/: App.java  ApplicationComponent.java  FilesExtractor.java  FilesExtractorModule.java  MainActivity.java  SystemModule.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ru/ilapin/mobileengine3d/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
